examples/test/testpolicy16020.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16020
  namespace: namespace48
spec:
  podSelector:
    matchLabels:
      key47: value25
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key16: value35
          key13: value36
      podSelector:
        matchLabels:
          key26: value5
          key27: value44
